# ssdclone

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  dependency-check.yml  deploy-aws.yml  security-scan.yml  yuh.yml  zap-baseline.yml
.sonar/: report-task.txt
app/: __init__.py  config.py  extensions.py  logging_config.py
app/models/: __init__.py  audit_log.py  authentication_review.py  backup_record.py  cart.py  cart_item.py  dispute.py  enums.py  order.py  order_status_history.py  product_listing.py  profile.py  review.py  security_event.py  seller_application.py  shipment.py  uploaded_file.py  user.py
app/repositories/: __init__.py
app/security/: __init__.py  admin_2fa.py  csrf.py  file_validation.py  headers.py  input_validation.py  output_encoding.py  ownership.py  password_policy.py  rate_limit.py  rbac.py  session_policy.py
app/services/: __init__.py  admin_service.py  audit_service.py  auth_service.py  backup_service.py  cart_service.py  dispute_service.py  listing_service.py  order_service.py  profile_service.py  review_service.py  security_event_service.py  seller_service.py  shipment_service.py  upload_service.py  user_service.py  workflow_service.py
app/utils/: __init__.py  audit.py  decorators.py
app/web/: __init__.py
deploy/gunicorn/: gunicorn.conf.py
deploy/nginx/: chateau-collective.conf
deploy/systemd/: chateau-collective.service
security/: bandit.yaml  semgrep.yaml
tests/: conftest.py  test_app_boots.py  test_audit_service.py  test_security_event_service.py
(+73 files in other folders)
