[project]
name = "ssd"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "email-validator==2.3.0",
    "flask==3.1.3",
    "flask-migrate==4.1.0",
    "flask-sqlalchemy==3.1.1",
    "flask-wtf==1.3.0",
    "python-dotenv==1.2.2",
    "werkzeug==3.1.8",
]

[dependency-groups]
dev = [
    "bandit==1.8.3",
    "flask-wtf==1.3.0",
    "pip-audit==2.9.0",
    "pytest==9.0.3",
    "pytest-flask==1.3.0",
    "semgrep==1.171.0",
]
